--- a/task (1).html
+++ b/task (1).html
@@ -5,10 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task Manager - Drag & Drop</title>
     <style>
-        /* Google Font */
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
 
-        /* General Page Styles */
         body {
             font-family: 'Poppins', sans-serif;
             display: flex;
@@ -28,7 +26,6 @@
             text-align: center;
         }
 
-        /* Task Creation Form */
         .task-creator {
             background: white;
             padding: 12px;
@@ -66,7 +63,6 @@
             background: #ff3b4a;
         }
 
-        /* Container for Columns */
         .container {
             display: flex;
             flex-wrap: wrap;
@@ -76,7 +72,6 @@
             justify-content: center;
         }
 
-        /* Task Columns */
         .column {
             flex: 1;
             background: white;
@@ -97,7 +92,6 @@
             margin: 0 0 10px;
         }
 
-        /* Task Cards */
         .task {
             padding: 12px;
             background: #ff5f6d;
@@ -108,7 +102,7 @@
             font-size: 14px;
             box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
             transition: transform 0.2s, box-shadow 0.2s;
-            touch-action: none; /* Prevents scrolling while dragging */
+            touch-action: none; 
             user-select: none;
         }
 
@@ -117,7 +111,6 @@
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
         }
 
-        /* Dragging Effects */
         .task:active {
             cursor: grabbing;
             opacity: 0.6;
@@ -127,8 +120,7 @@
             background: #d1e7fd;
             border: 2px dashed #ff5f6d;
         }
-
-        /* Responsive Design */
+        
         @media (max-width: 768px) {
             .container {
                 flex-direction: column;
@@ -154,7 +146,6 @@
 
     <h1>🚀 Drag & Drop Task Manager</h1>
 
-    <!-- Task Creation Form -->
     <div class="task-creator">
         <input type="text" id="taskInput" placeholder="Enter new task...">
         <button onclick="addTask()">Add Task</button>
@@ -217,7 +208,6 @@
                 event.dataTransfer.setData("text/plain", event.target.id);
             });
 
-            // Enable touch-based dragging for mobile
             newTask.addEventListener("touchstart", function (event) {
                 event.preventDefault();
                 const touch = event.touches[0];
