--- a/task.html
+++ b/task.html
@@ -102,7 +102,7 @@
             font-size: 14px;
             box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
             transition: transform 0.2s, box-shadow 0.2s;
-            touch-action: none; /* Prevents scrolling while dragging */
+            touch-action: none; 
             user-select: none;
         }
 
